k8s/00-namespace.yaml
# from task 2 - app namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/part-of: cm-app
